--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -2,10 +2,7 @@
 The most significant goals of the external stay are:
 
 \begin{itemize}
-% INFO: I like
 	\item Assess the feasibility of implementing my Ph.D. project in an industry setting.
-	\item Experience a modern software work environment.
-	% \item Gauge whether my Ph.D. project can be implemented in practice. 
 	\item Integrate my application into a test environment at Decision Brain, if applicable.
 	\item Get expert feedback on my scheduling methodology. 
 	\item Learn best practices for implementing scheduling solutions in industry.
@@ -13,7 +10,7 @@ The most significant goals of the external stay are:
 
 It is my belief that I have developed a scalable approach to modelling a generic 
 maintenance scheduling system (see section~\ref{sec:technical}). I am 
-modelling something that is similar to what is described in \citet{palmerMaintenancePlanningScheduling2019} 
+modelling something that is similar to what is described in \citep{palmerMaintenancePlanningScheduling2019} 
 which is a source that has a more practical orientation than most academic works. 
 
 My code operates on backend SAP tables and user inputs so I believe that there may be a possibility of integrating my 
@@ -26,10 +23,9 @@ full implementation could be mutually beneficial.
 I propose to have a dedicated contact at Decision Brain during my external stay, with whom I can discuss ideas and seek help from.
 
 \begin{itemize}
-	% TODO: This is not that great should be changed
 	\item First month: Determine if I can integrate my application in a relevant project at Decision Brain.
 	\item Second month: Work on implementing the scheduling system in Decision Brain with weekly or biweekly feedback.
-	\item Third month: Assess the feasibility of the project and possible course corrections.
+	\item Third month: Assess the strength of the project and future collaboration directions with Decision Brain.
 \end{itemize}
 
 The main incentive for Decision Brain to partake in this project would be to get a new perspective on how to develop scheduling solutions,
