--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -1,22 +1,18 @@
 \section{Personal}
 
-
-% WARNING: Dette er meget rodet og svært at følge med i, hvad din pointe er. Du beskriver flere ting, som enten virker lidt random eller ikke færdigøres.
-% Fx "I focus on designing systems...", og fortsætter med noget omkring projecthåndtering.
-% Jeg ville opbygge det som:
 I am an introverted person who prefers few but close partnerships. I would say my greatest strengths are:
 \begin{itemize}
-	\item Very maticulate about understanding the problem thereafter finding the best solution
-	\item Creating reliable and automatic systems, whether for coding applications, scripting workflows, drafting documents (LaTeX or Typst), etc.
+	\item Care intensly about the quality of the products that I am working on. I will call people out for bad technical decision making and hold people accountable for project decisions.
+	\item Maticulate about understanding the problem and afterwards building the best solution.
+	\item Creating reliable and automatic systems, whether for coding applications, scripting workflows, creating development setups (Linux and Nix), drafting documents (LaTeX or Typst), etc.
 \end{itemize}
 
 I would say my greatest weaknesess are:
 \begin{itemize}
-	\item Communication skill, I benefit a lot from a proactive and competent teamleader.
+	\item Communication skills, I usually benefit significantly from a proactive and competent teamleader.
 	\item Project management and prioritization is part of my job where I have consistently demonstrated that I have a blindspot.  
 \end{itemize}
  
-
 My hobbies include running (25-30 km per week), reading non-fiction on various topics not directly related to work; 
 and engaging in creative coding projects with friends.
 
