--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -11,14 +11,12 @@ Below is a list of my main issues so far that I have struggled to solve by mysel
 	\begin{itemize}
 		\item Stakeholders struggle to grasp the concept without a visual representation, making it challenging to communicate the API's functionality. Developing both is time consuming.
 	\end{itemize}
-	% TODO: Kommentar: Dette er for vagt... Alle har disse probler og ikke noget de kommer til at hjælpe med.
-	\item Many topics are outside the scope of my research project due to a lack of the essential skills. 
+	\item I am lacking essential skills such as effecitive stakeholder management and UX development. 
 	\begin{itemize}
-		% TODO: WARNING: Ukonkret. Skriv som om de er idioter. Det er nok ikke en fagperson der kommer til at læse det første gang.
-		\item Primarily stakeholder management and UX development.
+		\item Working with Decision Brain I hope to learn how to be effective at what I do best and understand what it takes to 
+			  rely on people that have the essential skills do not.
 	\end{itemize}
-	% TODO: Jeg ville ændre dette til noget med Software project management, financial maturity, academia vs commercial
-	\item Uncertainty about the project's financial viability and whether to continue its development within an academic setting.
+	\item Uncertainty about the project's financial viability, step towards practical application, and how to manange a software project such as this one.
 	\begin{itemize}
 		\item I think that the team at Decision Brain will be able to provide guidance here.
 	\end{itemize}
@@ -29,8 +27,8 @@ Below is a list of my main issues so far that I have struggled to solve by mysel
 	\item Gain a fresh perspective on developing scheduling solutions. 
 	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
 	\item Access to a partial implementation of innovative scheduling code.
+	\item Aquire personal contacts within Total Energies that are responsible for managing and developing maintenance scheduling solutions internally e.g. Total Digital Factory.
 \end{itemize}
 
-I believe an external stay at Decision Brain could greatly improve my personal skills and usefulness for society
-% TODO: Jeg synes ikke helt sidste del af sætningen er der, måske du kan komme på noget bedre. Jeg synes der skal være en afslutning på summary.
-while simultaniously benefit Decision Brain where I suspect my expertise within scheduling systems might add to your knowledge base.
+I believe an external stay at Decision Brain could greatly improve my personal skills and the future financial value of the project.
+I suspect my expertise in designing, scoping, and building scheduling systems will contribute to Decision Brain's knowledge base as well.
