--- a/memos/decision-brain/main.tex
+++ b/memos/decision-brain/main.tex
@@ -38,7 +38,7 @@
 
 \begin{document}
 	\input{./summary.tex}
-	% TODO! Introduce the project maybe. It will make it easier to understand your goals of external stay
+	\input{./project-introduction.tex}
 	\input{./goals-of-external-stay.tex}
 	\input{./personal.tex}
 	\input{./roadmap.tex}
@@ -50,5 +50,3 @@
 
 \bibliographystyle{plainnat}
 \bibliography{../../papers/actor-based-large-neighborhood-search/refs}
-
-\bibliographystyle{elsarticle-harv}
