--- a/memos/decision-brain/main.tex
+++ b/memos/decision-brain/main.tex
@@ -5,12 +5,12 @@
 \usepackage{algpseudocode}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{bibentry}
 \usepackage{enumitem}
 \usepackage{fancyhdr}
 \usepackage{fontspec}
 \usepackage[margin=2.0cm]{geometry}
 \usepackage{graphicx}
-\usepackage{hyperref}
 \usepackage{ifthen}
 \usepackage{makecell}
 \usepackage{multicol}
@@ -26,10 +26,9 @@
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{Project Plan: Decision-Brain External Stay}
-\rhead{Christian Brunbjerg Jespersen}
+\rhead{Christian Brunbjerg Jespersen - cbrje@dtu.dk}
 
 \cfoot{\thepage}
-
 
 % \titleformat{\section}{\normalfont\Large\bfseries}{}{0em}{}
 % \title{
@@ -46,7 +45,7 @@
 	% \input{./academic.tex}
 	\input{./appendix.tex}
 	% \input{./../../curriculum-vitae.tex}
+	\bibliographystyle{plainnat}
+	\bibliography{../../papers/actor-based-large-neighborhood-search/refs}
 \end{document}
 
-\bibliographystyle{plainnat}
-\bibliography{../../papers/actor-based-large-neighborhood-search/refs}
