--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -7,7 +7,7 @@ I am an introverted person who prefers few but close partnerships. I would say m
 	\item Creating reliable and automatic systems, whether for coding applications, scripting workflows, creating development setups (Linux and Nix), drafting documents (LaTeX or Typst), etc.
 \end{itemize}
 
-I would say my greatest weaknesess are:
+I would say my greatest weaknesses are:
 \begin{itemize}
 	\item Communication skills, I usually benefit significantly from a proactive and competent teamleader.
 	\item Project management and prioritization is part of my job where I have consistently demonstrated that I have a blindspot.  
