--- a/memos/decision-brain/project-introduction.tex
+++ b/memos/decision-brain/project-introduction.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Project Introduction}
 
 The project aims to make a real-time scheduling system that is able to \textbf{optimize} and \textbf{coordinate} state across
