--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -16,7 +16,7 @@ Below is a list of my main issues so far that I have struggled to solve by mysel
 		\item Working with Decision Brain I hope to learn how to be effective at what I do best and understand what it takes to 
 			  rely on people that have the essential skills do not.
 	\end{itemize}
-	\item Uncertainty about the project's financial viability, step towards practical application, and how to manange a software project such as this one.
+	\item Uncertainty about the project's financial viability, step towards practical application, and how to manage a software project such as this one.
 	\begin{itemize}
 		\item I think that the team at Decision Brain will be able to provide guidance here.
 	\end{itemize}
@@ -27,7 +27,7 @@ Below is a list of my main issues so far that I have struggled to solve by mysel
 	\item Gain a fresh perspective on developing scheduling solutions. 
 	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
 	\item Access to a partial implementation of innovative scheduling code.
-	\item Aquire personal contacts within Total Energies that are responsible for managing and developing maintenance scheduling solutions internally e.g. Total Digital Factory.
+	\item Acquire personal contacts within Total Energies that are responsible for managing and developing maintenance scheduling solutions internally e.g. Total Digital Factory.
 \end{itemize}
 
 I believe an external stay at Decision Brain could greatly improve my personal skills and the future financial value of the project.
