--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,19 +1,21 @@
 @article{ehrgott2002multiple,
-  title={Multiple criteria optimization: state of the art annotated bibliographic surveys},
-  author={Ehrgott, Matthias and Gandibleux, Xavier},
-  year={2002},
-  publisher={Springer Science \& Business Media}
+	title = {Multiple criteria optimization: state of the art annotated
+	         bibliographic surveys},
+	author = {Ehrgott, Matthias and Gandibleux, Xavier},
+	year = {2002},
+	publisher = {Springer Science \& Business Media},
 }
 
 @article{barthelemy2002human,
-  title={Human centered processes and decision support systems},
-  author={Barth{\'e}lemy, Jean-Pierre and Bisdorff, Raymond and Coppin, Gilles},
-  journal={European Journal of Operational Research},
-  volume={136},
-  number={2},
-  pages={233--252},
-  year={2002},
-  publisher={Elsevier}
+	title = {Human centered processes and decision support systems},
+	author = {Barth{\'e}lemy, Jean-Pierre and Bisdorff, Raymond and Coppin,
+	          Gilles},
+	journal = {European Journal of Operational Research},
+	volume = {136},
+	number = {2},
+	pages = {233--252},
+	year = {2002},
+	publisher = {Elsevier},
 }
 
 @article{meignan_review_2015,
@@ -63,48 +65,48 @@
 	        .pdf:application/pdf},
 }
 
-@article {Pareto1897,
-	author = {Pareto, Vilfredo}, 
-	title = {The New Theories of Economics}, 
-	journal = {The Journal of Political Economy}, 
-	volume = {5}, 
-	number = {4}, 
-	pages = {485-502}, 
-	year = {1897}, 
-	issn = {00223808, 1537534x}
+@article{Pareto1897,
+	author = {Pareto, Vilfredo},
+	title = {The New Theories of Economics},
+	journal = {The Journal of Political Economy},
+	volume = {5},
+	number = {4},
+	pages = {485-502},
+	year = {1897},
+	issn = {00223808, 1537534x},
 }
 
 @article{ben2009robust,
-  title={Robust optimization},
-  author={Ben-Tal, Aharon and Nemirovski, Arkadi and El Ghaoui, Laurent},
-  year={2009},
-  publisher={Princeton university press}
+	title = {Robust optimization},
+	author = {Ben-Tal, Aharon and Nemirovski, Arkadi and El Ghaoui, Laurent},
+	year = {2009},
+	publisher = {Princeton university press},
 }
 
 @book{birge2011introduction,
-  title={Introduction to stochastic programming},
-  author={Birge, John R and Louveaux, Francois},
-  year={2011},
-  publisher={Springer Science \& Business Media}
+	title = {Introduction to stochastic programming},
+	author = {Birge, John R and Louveaux, Francois},
+	year = {2011},
+	publisher = {Springer Science \& Business Media},
 }
 
 @article{zadeh1988fuzzy,
-  title={Fuzzy logic},
-  author={Zadeh, Lotfi Asker},
-  journal={Computer},
-  volume={21},
-  number={4},
-  pages={83--93},
-  year={1988},
-  publisher={IEEE}
+	title = {Fuzzy logic},
+	author = {Zadeh, Lotfi Asker},
+	journal = {Computer},
+	volume = {21},
+	number = {4},
+	pages = {83--93},
+	year = {1988},
+	publisher = {IEEE},
 }
 
 @book{garey1979computers,
-  title={Computers and intractability},
-  author={Garey, Michael R and Johnson, David S},
-  volume={174},
-  year={1979},
-  publisher={freeman San Francisco}
+	title = {Computers and intractability},
+	author = {Garey, Michael R and Johnson, David S},
+	volume = {174},
+	year = {1979},
+	publisher = {freeman San Francisco},
 }
 
 @article{geurtsenProductionMaintenanceResource2023,
@@ -734,9 +736,9 @@
 	title = {Enhancing the Effectiveness of Joint Production and Maintenance
 	         Scheduling Based on a Multi-Agent System and a {{Pigouvian}}
 	         Approach of Externalities},
-	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and Nneme
-	          Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman, L{\'
-	          e}opold Gustave},
+	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and
+	          Nneme Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman
+	          , L{\' e}opold Gustave},
 	year = {2024},
 	month = mar,
 	journal = {Production Engineering},
